--- a/styling/styles.less
+++ b/styling/styles.less
@@ -157,7 +157,7 @@
 }
 
 .about {
-    @media @desktop {margin: 15px;}
+    @media @desktop {margin-left: 30px; margin-right: 30px;}
     @media @mobile {margin: 10px;}
     font-size: 21px;
     p {
